--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,10 @@ menu:
   相册: /photos
   随笔: /notes
   归档: /archives
+  静态简历1: http://yaojusheng.gitee.io/resume
+  静态简历2: http://yaojusheng.gitee.io/static-resume
+  动态简历: http://yaojusheng.gitee.io/dynamic-resume
+  简历制作: http://yaojusheng.gitee.io/online-resume
 
 menu_icons:
   enable: true
